--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "ts-node --compiler-options '{\"moduleResolution\":\"node\",\"module\":\"commonjs\"}' --transpile-only -r tsconfig-paths/register tests/table.test.ts"
   },
   "dependencies": {
     "next": "14.2.7",
@@ -20,6 +21,8 @@
     "autoprefixer": "10.4.20",
     "postcss": "8.4.41",
     "tailwindcss": "3.4.10",
+    "tsconfig-paths": "4.2.0",
+    "ts-node": "10.9.2",
     "typescript": "5.5.4"
   }
 }
